--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>SGP - saisie</title>
-  <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap-4.0.0-alpha.6-dist/css/bootstrap.min.css">
 
   <script src="https://code.jquery.com/jquery-1.12.3.js"></script>
-  <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+  <script src="bootstrap-4.0.0-alpha.6-dist/js/bootstrap.min.js"></script>
   <script src="app.js"></script>
 </head>
 
 <style>
-  #listeCollabs>.collab {
+  #listeCollabs>.collab, #emptyFilterNom {
     cursor: pointer;
   }
 </style>
